@@ -1758,6 +1758,20 @@ const run = async (): Promise<void> => {
   {
     const outDir = mkTmp();
     const tmp = mkTmp();
+    const caseCollisionVsix = path.join(tmp, "case_collision_entries.vsix");
+    writeStoredZip(caseCollisionVsix, [
+      { name: "manifest.json", text: JSON.stringify({ manifest_version: 3, name: "demo", version: "1.0.0" }) },
+      { name: "scripts/Alpha.js", text: "console.log('a');" },
+      { name: "scripts/alpha.js", text: "console.log('b');" },
+    ]);
+    const res = await runCliCapture(["safe-run", caseCollisionVsix, "--out", outDir, "--adapter", "extension"]);
+    assertEq(res.status, 40, "safe-run should fail closed for case-colliding extension package entry paths");
+    assert(res.stderr.includes("EXTENSION_FORMAT_MISMATCH"), "expected EXTENSION_FORMAT_MISMATCH on stderr for case-colliding extension package entry paths");
+  }
+
+  {
+    const outDir = mkTmp();
+    const tmp = mkTmp();
     const badIso = path.join(tmp, "bad.iso");
     fs.writeFileSync(badIso, "not-an-iso", "utf8");
     const badRes = await runCliCapture(["safe-run", badIso, "--out", outDir, "--adapter", "image"]);
